make project runnable with java 11